# Eurorack-Modules

./: .gitignore  .gitmodules  BluePill.lbr  CEM.lbr  Cherry_MX_v7.0.lbr  ESP32_codec_board.lbr  EurorackModularParts.lbr  FarnellThings.lbr  FrontPanel.DRU  GateRhythm.brd  GateRhythm.dxf  GateRhythm.sch  GoldFishFront.brd  GoldFishFront.lbr  GoldFishFront.pnl  GoldFishFront.pro  GoldFishFront.sch  Jack.brd  Jack.sch  K66-BGA.lbr  KL02LogicThingie.brd  KL02LogicThingie.lbr  KL02LogicThingie.pro  KL02LogicThingie.sch  KeyChain.brd  LICENSE  LauriFilter.brd  LauriFilter.sch  OPL.lbr  OpampTestBoard.brd  OpampTestBoard.sch  Prototype edge.brd  README.md  SamacSys_Parts.lbr  ScaleOffset.brd  ScaleOffset.pro  ScaleOffset.sch  SonicScrewdriver.brd  SonicScrewdriver.dxf  SonicScrewdriver.sch  (+11 more)
Development/: AncientFilter-euro-fixes.brd  AncientFilter-euro-fixes.sch  AncientFilter-euro.afdesign  AncientFilter-euro.brd  AncientFilter-euro.sch  AncientFilter-euro_front.afdesign  AncientFilter.brd  AncientFilter.sch  CNCdriver.brd  CNCdriver.sch  SWDIsolator.brd  SWDIsolator.sch  USB_MiniPower.afdesign  USB_MiniPower.brd  USB_MiniPower.sch
Development/Eurorack Set 2021/Wobbler2Code/: BasicShapeCompensation.h  CMakeLists.txt  FreqLerp.h  Pendulum.cpp  Pendulum.h  Wobbler2.cpp  Wobbler2.h  Wobbler2Drum.h  Wobbler2Main.cpp  spi.pio
Development/Eurorack Set 2021/Wobbler2Code/simulator/: CMakeLists.txt  wobbler2_simulator_main.cpp
Development/Eurorack Set 2021/Wobbler2Code/simulator/dependencies/: CMakeLists.txt
Development/Eurorack Set 2021/Wobbler2Code/simulator/dependencies/imgui-sfml/: CMakeLists.txt
Development/Eurorack Set 2021/Wobbler2Code/simulator/dependencies/sfml/: CMakeLists.txt
EuroForError/: BigBus_Error.brd  BigBus_Error.sch  DoubleAmp.brd  DoubleAmp.sch  LompeOnderdelen.lbr  Organ.brd  Organ.sch  Organ_fix1.brd
Eurorack FutureSets/: DrumVoices.brd  EnvLfo.brd  K66.sch  MiniScreenStrip.sch  TestBench.sch
Eurorack Set 1/: OpampTestBoard.brd  ZephMultiples.brd
Eurorack Set 2/: EnvLfo.sch  EuroProtoFront.brd  EuroProtoFront.sch  GateRhythm-R2.brd  GateRhythm-R2.sch  GoldFishFront-R2.brd  GoldFishFront-R2.sch  LEDDistortion.brd  LEDDistortion.sch  LauriFilter-R2.brd  LauriFilter-R2.sch  MiniBus.brd  MiniBus.sch  OpampTestBoard.brd  OpampTestBoard.sch  ScaleOffset-R2.brd  ScaleOffset-R2.sch  SimpleMixer.brd  SonicScrewdriver-R2.brd  SonicScrewdriver-R2.sch  TestBench.brd  TestBench.sch  TimeLord-R2.sch  ZephMultiples-R2.brd  ZephMultiples-R2.sch
Eurorack Set 3/: 4IO.brd  4IO.sch  GroundRouter.ctl  JTAG Passthrough.brd  JTAG Passthrough.sch  LEDDistortionV2.brd  LEDDistortionV2.sch  Melody - OpAmp Sim For Knobs (falstad.com).txt  Melody.brd  Melody.sch  ScaleOffset-R3.brd  ScaleOffset-R3.sch  SimpleTrigger.brd  SimpleTrigger.sch  SonicScrewdriver-R3.brd  SonicScrewdriver-R3.sch  TopRouter.ctl
Eurorack Set 4/: Tuesday(MelodyR2).brd  Tuesday(MelodyR2).csv  Tuesday(MelodyR2).sch  Tuesday(MelodyR2-smtleds).brd  Tuesday(MelodyR2-smtleds).sch
Eurorack Set 5/: CVSummer.brd  CVSummer.sch  CodecDelay.brd  CodecDelay.sch  Envelope.brd  Envelope.sch  LFO.brd  LFO.sch  TuesdayR3.brd  TuesdayR3.lbr  TuesdayR3.mnb  TuesdayR3.sch  VCAFront.brd  VCAFront.sch  Wasp.brd  Wasp.sch
Eurorack Set 6/: BigBus.brd  BigBus.sch  (+8 more)
(+697 files in other folders)
